--- a/index.html
+++ b/index.html
@@ -429,13 +429,13 @@
                 </a>
                 <h2>SWTRANSITO</h2>
                 <p style="margin-bottom: 5px">
-                  Sistema de agenda de citas para Barberías realizado en ASP.NET
-                  FRAMEWORK (MVC), con MYSQL.
+                  Sistema para la enseñanza de señales de transito desarrollado
+                  en ASP.NET FRAMEWORK (MVC) y gestor de base de datos MYSQL.
                 </p>
                 <ul class="social-icon">
                   <li>
                     <a
-                      href="https://github.com/jaflors/Sistema-de-Barberias-ASP-NET-FRAMEWORK"
+                      href="https://github.com/jaflors/SWTRANSITO-ASP.NET-FRAMEWORK"
                       target="_blank"
                       class="github"
                       title="Ver Codigo"
