--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
                     >100000</span
                   >
                 </h5>
-                <span>Ganar de aprender </span>
+                <span>Ganas de aprender </span>
               </div>
             </div>
           </div>
