--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                 <h5>
                   <span data-count="10" class="statistics-count">10</span>
                 </h5>
-                <span>Proyectos echos</span>
+                <span>Proyectos Realizados</span>
               </div>
             </div>
           </div>
