--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
                 <h5>
                   <span data-count="4000" class="statistics-count">4000</span>
                 </h5>
-                <span>Tasas de café. </span>
+                <span>Tazas de café. </span>
               </div>
             </div>
           </div>
